2015-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* Merge upstream binutils 2.25 by merging binutils branch into trunk.

2015-07-01 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/mcs51/peep.c:
	  Add NULL pointer check.

2015-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Adjust buffer sizes RFE #441.

2015-06-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  doc/sdccman.lyx,
	  support/regression/tests/version.c:
	  Implement patchlevel macro RFE #441.

2015-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/*
	  Merge upstream binutils 2.25.

2015-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/*
	  Import more parts of upstream binutils 2.23.2.

2015-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/*
	  Import more parts of upstream binutils 2.23.2.

2015-06-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* device/include/float.h:
	  Hide sdcc library private macros.
	* support/sdbinutils/include/objalloc.h:
	* support/sdbinutils/libiberty/objalloc.c:
	  Apply patches from GNU.

2015-06-25 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure:
	* configure.in:
	* device/non-free/include/Makefile.in:
	  Fix the bug "make uninstall" left empty directory. 
	* src/SDCCBBlock.c:
	  Apply patch #158 to fix bug #1693.
	* support/regression/tests/version.c:
	  Fix the failure in "make test-host".

2015-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  doc/sdccman.lyx,
	  support/regression/tests/version.c:
	  Implement version macros RFE #441.

2015-06-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/collate-results.py:
	  Fix the bug that an abnormal stop in reg-rest can not be detected.

2015-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Fix bug #2389.
	* src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/SDCCutil.c,
	  src/SDCCutil.h:
	  Remove build date from version string to make reproducible builds easier.
